# F.R.I.D.A.Y

./: .env.example  .env.macos.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  vlc-help.txt
.claude/: launch.json  settings.local.json
alexa-lambda-python/: config.example.json  lambda_function.py  requirements.txt  test_invoke.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
data/: todos.json.migrated
docs/: FRIDAY-LISTEN-UI-REDESIGN.md  debugging.md  setup.md  unified-assistant.md
lib/: logger.js  musicAutoplayPrefs.js
openclaw-ship/: README.md  setup-extension.ps1  setup-extension.sh  setup.ps1  setup.sh
pc-agent/: DEVELOPMENT.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: _probe-audio.ps1  argus.py  create-calendar-event.py  cursor-cdp-probe.py  cursor-grpc-watch.py  cursor-reply-watch.py  cursor-thinking-ocr.py  cursor-watcher-smoke-thinking.py  cursor_compose_prompt.py  dev-both.ps1  dev-win-notify-sidecar.mjs  email-analyze.py  export-learning-dataset.py  free-pc-agent-dev-ports.ps1  friday-action-tracker.py  friday-ambient-test.py  friday-ambient.py  friday-listen.py  friday-music-scheduler.py  friday-notify-followup-listen.py  friday-reminder-watch.py  friday-silence-watch.py  friday-speak-burst.ps1  friday-voice-daemon.ps1  friday_output_health.py  friday_speaker.py  friday_vocal_asides.py  friday_win_focus.py  gmail-watch.py  gmail.py  narrate-screen.py  (+49 more)
(+236 files in other folders)
