[package]
name = "openclaw-desktop"
version = "0.1.0"
description = "OpenClaw macOS menu-bar agent"
authors = ["OpenClaw"]
edition = "2021"

[lib]
name = "openclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
